Translation file cleanup

--- a/src/etc/Translation_de.properties
+++ b/src/etc/Translation_de.properties
@@ -267,9 +267,12 @@ action_join_online_storage.key=B
 #orig#action_join_online_storage.name=Join
 action_join_online_storage.name=Speichern
 
-action_link_directory.description=Directory mit bestehendem Folder verknüpfen
+#orig#action_link_directory.description=Link directory to an existing folder
+action_link_directory.description=Directory mit bestehendem Folder verkn\u00fcpfen
+#orig#action_link_directory.key=L
 action_link_directory.key=V
-action_link_directory.name=Verknüpfen
+#orig#action_link_directory.name=Link
+action_link_directory.name=Verkn\u00fcpfen
 
 #orig#action_members_refresh.description=Refresh member list and permissions
 action_members_refresh.description=L\u00e4dt die Liste der Mitglieder und Berechtigungen neu
@@ -668,7 +671,7 @@ dialog.already_running.start_button=Trotzdem starten
 dialog.already_running.title=L\u00e4uft bereits
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning={APPNAME} l\u00e4uft bereits
-#orig#dialog.ask_for_friendship.button.add=Add to connections
+#orig#dialog.ask_for_friendship.button.add=Add to computers
 dialog.ask_for_friendship.button.add=Als Freund hinzuf\u00fcgen
 #orig#dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 dialog.ask_for_friendship.explain=Zu Freunden wird eine\nVerbindung aufrecht erhalten.
@@ -757,7 +760,8 @@ dialog.delete_profile.title=Eigenen Transfer Modus l\u00f6schen
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=Schwerer Fehler
-dialog.link_folder_online.select_text=Folder auswählen
+#orig#dialog.link_folder_online.select_text=Select folder
+dialog.link_folder_online.select_text=Folder ausw\u00e4hlen
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 #orig#dialog.node_select.hide_offline.name=Hide offline
@@ -893,6 +897,7 @@ exp_computer_view.version=Programmversion\: {0}
 
 #orig#exp_folder_view.collapse=Collapse folder details
 exp_folder_view.collapse=Folder Details zuklappen
+##exp_folder_view.deleted_files=Deleted files\: {0}
 #orig#exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 exp_folder_view.estimated_synchronized=Voraussichtlich synchronisiert\: {0}
 #orig#exp_folder_view.expand=Expand folder details
@@ -907,6 +912,7 @@ exp_folder_view.files_available_tip=Verf\u00fcgbare Dateien ansehen
 exp_folder_view.folder_local_online_text=Lokaler Folder, online gesichert
 #orig#exp_folder_view.folder_local_text=Local folder
 exp_folder_view.folder_local_text=Lokaler Folder
+#orig#exp_folder_view.folder_online_text=Non-local folder
 exp_folder_view.folder_online_text=Nicht-lokaler Folder
 #orig#exp_folder_view.folder_preview_text=Preview folder
 exp_folder_view.folder_preview_text=Vorschau Folder
@@ -1184,9 +1190,10 @@ folder_remove.dialog.button.key=E
 folder_remove.dialog.button.name=Entfernen
 #orig#folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.delete=Metadaten l\u00f6schen
-#orig#folder_remove.dialog.remove_from_local=Stop sync locally
+#orig#folder_remove.dialog.remove_from_local=Stop to sync local
 folder_remove.dialog.remove_from_local=Nicht mehr lokal synchronisieren
-folder_remove.dialog.remove_from_os=Online löschen
+#orig#folder_remove.dialog.remove_from_os=Remove online
+folder_remove.dialog.remove_from_os=Online l\u00f6schen
 #orig#folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.sync_warning=Dieser Folder wird gerade synchronisiert\!
 #orig#folder_remove.dialog.text=Remove Folder {0}?
@@ -1207,7 +1214,9 @@ folder_repository.warn_on_close_eta.text=Diese Folder wurden noch nicht fertig s
 folders_list.collapse_hint=Gruppe zuklappen
 #orig#folders_list.expand_hint=Expand group
 folders_list.expand_hint=Gruppe ausklappen
+#orig#folders_list.local_folders=Local folders
 folders_list.local_folders=Lokale Folder
+#orig#folders_list.online_folders=Non-local folders
 folders_list.online_folders=Nicht-lokale Folder
 
 #orig#folders_tab.no_folders_available=No folders available
@@ -1438,9 +1447,12 @@ line_speed.unlimited=Unbegrenzt
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=Up
 
+#orig#link_folder.dialog.description=Which folder should be synced to this directory?
 link_folder.dialog.description=Welcher Folder soll in dieses Verzeichnis synchronisiert werden?
+#orig#link_folder.dialog.link_text=Link
 link_folder.dialog.link_text=V
-link_folder.dialog.title=Mit Folder verknüpfen
+#orig#link_folder.dialog.title=Link to an existing folder
+link_folder.dialog.title=Mit Folder verkn\u00fcpfen
 
 #orig#low_memory.configure_failure={APPNAME} was unable to configure additional memory.
 low_memory.configure_failure={APPNAME} konnten keine h\u00f6heren Hauptspeicher-Einstellungen installieren.
@@ -1522,13 +1534,15 @@ network_statistics_panel.known_computers=Bekannte Computer
 ##network_statistics_panel.public_folders_size=Total size of all available files
 ##network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1626,7 +1640,7 @@ preferences.dialog.delta_sync=Delta Sync
 preferences.dialog.delta_sync.tooltip=Synchronisiert nur Datei\u00e4nderungen
 #orig#preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
 preferences.dialog.dialogs.ask_to_add_friend_message=Nachricht schreiben, wenn Benutzer auf die Freundesliste gesetzt wird.
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Meldung wenn ein Benutzer einen Folder betritt, der nicht auf der Freundesliste steht.
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=Nach {APPNAME} Programmupdates suchen
@@ -2134,6 +2148,7 @@ settings_tab.folder_not_empty=Folder {0} ist nicht leer.
 settings_tab.folder_not_empty.title=Folder nicht leer
 #orig#settings_tab.ignore_patterns=Ignore patterns
 settings_tab.ignore_patterns=Datei-Muster Ausschl\u00fcsse
+#orig#settings_tab.local_folder_location=Local directory
 settings_tab.local_folder_location=Lokales Verzeichnis
 #orig#settings_tab.move_content=Also move current folder contents?
 settings_tab.move_content=Auch Inhalt verschieben?
@@ -2415,6 +2430,7 @@ transfer_mode.disabled.name=Abgeschaltet
 transfer_mode.host_files.name=Versenden
 #orig#transfer_mode.manual_synchronization.name=Manual sync
 transfer_mode.manual_synchronization.name=Manuell synchronisieren
+##transfer_mode.meta_sync.name=Auto sync (meta)
 #orig#transfer_mode.no_sync.name=No sync
 transfer_mode.no_sync.name=Keine Synchronisation
 
@@ -2560,8 +2576,8 @@ wizard.choose_disk_location.local_base.title=Speicherort
 wizard.choose_disk_location.maual_sync=Manuell synchronisieren
 #orig#wizard.choose_disk_location.options=Please select required options
 wizard.choose_disk_location.options=Optionen ausw\u00e4hlen
-#orig#wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
-wizard.choose_disk_location.os_over_size=Erlaubte Kapazität k\u00f6nnte \u00fcberbelegt werden. Kauf empfohlen.
+#orig#wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
+wizard.choose_disk_location.os_over_size=Erlaubte Kapazit\u00e4t k\u00f6nnte \u00fcberbelegt werden. Kauf empfohlen.
 #orig#wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select=Bitte w\u00e4hlen Sie das Verzeichnis
 #orig#wizard.choose_disk_location.select_file=Select file
@@ -2675,9 +2691,11 @@ wizard.multi_folder_setup.no_name.text=Kein Name f\u00fcr {0} eingegeben
 wizard.multi_folder_setup.no_name.title=Kein Name
 #orig#wizard.multi_folder_setup.title=Configure Folders
 wizard.multi_folder_setup.title=Folder konfigurieren
+#orig#wizard.multi_online_storage_setup.local_folder_location=Local directory
 wizard.multi_online_storage_setup.local_folder_location=Lokales Verzeichnis
 #orig#wizard.multi_online_storage_setup.select_directory=Select directory
 wizard.multi_online_storage_setup.select_directory=Verzeichnis ausw\u00e4hlen
+#orig#wizard.multi_online_storage_setup.title=Configure folder(s)
 wizard.multi_online_storage_setup.title=Folder einrichten
 #orig#wizard.pfwizard.folder_title=Folder Wizard
 wizard.pfwizard.folder_title=Assistent
@@ -2690,8 +2708,10 @@ wizard.pfwizard.folder_title=Assistent
 wizard.project_name.folder_project_success=Die Projektsynchronisation wurde erfolgreich eingerichtet\!\n
 #orig#wizard.select_online_storage.desktop_shortcut.text=Create desktop shortcut
 wizard.select_online_storage.desktop_shortcut.text=Desktop Verkn\u00fcpfung erstellen
+#orig#wizard.select_online_storage.info=Please select folders to sync to this computer.
 wizard.select_online_storage.info=Welche Folder sollen mit diesem Computer synchronisiert werden?
-wizard.select_online_storage.title=Folder auswählen
+#orig#wizard.select_online_storage.title=Select Folders
+wizard.select_online_storage.title=Folder ausw\u00e4hlen
 #orig#wizard.send_invitations.add_message.text=Add a message
 wizard.send_invitations.add_message.text=Nachricht hinzuf\u00fcgen
 #orig#wizard.send_invitations.add_message.tip=Add a message for the recipient
@@ -2794,7 +2814,8 @@ wizard.what_to_do.load_invite.tip=Einen Folder einrichten mittels Einladungs-Dat
 wizard.what_to_do.more=Mehr Optionen anzeigen
 ##wizard.what_to_do.more.tip=Shows advance options
 ##wizard.what_to_do.no_login=Not logged in. Please login first or wait to get connected.
-wizard.what_to_do.no_os_text=Keine Folder verfügbar, die mit diesem\nComputer synchronisert werden könnten.
+#orig#wizard.what_to_do.no_os_text=There are no folders available\nfor syncing with this computer.
+wizard.what_to_do.no_os_text=Keine Folder verf\u00fcgbar, die mit diesem\nComputer synchronisert werden k\u00f6nnten.
 #orig#wizard.what_to_do.open_online_documentation=Open documentation
 wizard.what_to_do.open_online_documentation=Dokumentation \u00f6ffnen
 #orig#wizard.what_to_do.open_online_documentation.tip=Open online documentation about setting up {APPNAME}
