--- a/src/etc/Translation_es.properties
+++ b/src/etc/Translation_es.properties
@@ -676,7 +676,7 @@ dialog.already_running.start_button=Iniciar de todas maneras
 dialog.already_running.title=Ya funcionando
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning={APPNAME} ya esta en funcionamiento\n\nConsejo\: Si reinici\u00f3 {APPNAME}, \nelimine todos los procesos javaw/java e intentelo de nuevo
-#orig#dialog.ask_for_friendship.button.add=Add to connections
+#orig#dialog.ask_for_friendship.button.add=Add to computers
 dialog.ask_for_friendship.button.add=A\u00f1oadir a amistades
 #orig#dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 dialog.ask_for_friendship.explain=You can easily change the friend\nstatus using the context menus (right-mouse-click).
@@ -765,7 +765,7 @@ dialog.delete_profile.title=Borrar modo de transferencia personalizado
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=Error Fatal
-##dialog.link_folder_online.select_text=Select non-local folder
+##dialog.link_folder_online.select_text=Select folder
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 #orig#dialog.node_select.hide_offline.name=Hide offline
@@ -914,6 +914,7 @@ exp_computer_view.version=Versi\u00f3n del cliente\: {0}
 
 #orig#exp_folder_view.collapse=Collapse folder details
 exp_folder_view.collapse=Colapsar detalles de carpeta
+##exp_folder_view.deleted_files=Deleted files\: {0}
 #orig#exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 exp_folder_view.estimated_synchronized=Tiempo de sincronizaci\u00f3n estimado\: {0}
 #orig#exp_folder_view.expand=Expand folder details
@@ -1212,9 +1213,9 @@ folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=Remover
 #orig#folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.delete=Borrar meta-data
-#orig#folder_remove.dialog.remove_from_local=Stop sync locally
+#orig#folder_remove.dialog.remove_from_local=Stop to sync local
 folder_remove.dialog.remove_from_local=Stop synchronizing locally
-##folder_remove.dialog.remove_from_os=Remove from folders
+##folder_remove.dialog.remove_from_os=Remove online
 #orig#folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.sync_warning=El folder esta siendo sincronizado\!
 #orig#folder_remove.dialog.text=Remove Folder {0}?
@@ -1475,7 +1476,7 @@ line_speed.unlimited=No limitar el tr\u00e1fico
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=Limitar Subida
 
-##link_folder.dialog.description=Select an folder to sync local.
+##link_folder.dialog.description=Which folder should be synced to this directory?
 ##link_folder.dialog.link_text=Link
 ##link_folder.dialog.title=Link to an existing folder
 
@@ -1568,13 +1569,15 @@ network_statistics_panel.public_folders_size=Tama\u00f1o total de todos los arch
 #orig#network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network_statistics_panel.reconnection_queue_size=Nodos en esperand en fila para ser reconectados
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1676,7 +1679,7 @@ preferences.dialog.delta_sync=Use delta sync
 preferences.dialog.delta_sync.tooltip=Sincronizar solo los archivos que han cambiado.
 #orig#preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
 preferences.dialog.dialogs.ask_to_add_friend_message=Preguntar antes de a\u00f1adir un mensaje personal para un amigo.
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Preguntar si se desea a\u00f1adir a lista de amigos si alguien se convierte en miembro de una carpeta
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=Indagar por actualizaciones del programa {APPNAME}
@@ -2456,6 +2459,7 @@ transfer_mode.disabled.name=Deshabilitado
 transfer_mode.host_files.name=Compartir/Mandar
 #orig#transfer_mode.manual_synchronization.name=Manual sync
 transfer_mode.manual_synchronization.name=Sincronizaci\u00f3n manual
+##transfer_mode.meta_sync.name=Auto sync (meta)
 #orig#transfer_mode.no_sync.name=No sync
 transfer_mode.no_sync.name=No sincronizar
 
@@ -2614,7 +2618,7 @@ wizard.choose_disk_location.local_base.title=Directorio base
 wizard.choose_disk_location.maual_sync=Sincronizaci\u00f3n manual
 #orig#wizard.choose_disk_location.options=Please select required options
 wizard.choose_disk_location.options=Favor de seleccionar las opciones necesarias
-#orig#wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
+#orig#wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
 wizard.choose_disk_location.os_over_size=Advertencia - La capacidad de almacenamiento en linea ha sido excedida
 #orig#wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select=Favor de seleccionar un directorio
