--- a/src/etc/Translation_fr.properties
+++ b/src/etc/Translation_fr.properties
@@ -443,7 +443,7 @@ dialog.already_running.start_button=D\u00e9marrer syst\u00a9matiquement
 dialog.already_running.title=D\u00e9j\u00e0 en cours d'ex\u00e9cution
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder fonctionne d\u00e9j\u00e0\n\nInfo\: Si vous red\u00e9marrez PowerFolder, \n arr\u00eatez tous les processus javaw/java avant de relancer le programme
-##dialog.ask_for_friendship.button.add=Add to connections
+##dialog.ask_for_friendship.button.add=Add to computers
 ##dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 ##dialog.ask_for_friendship.message_title=Message from {0}
 ##dialog.ask_for_friendship.question={0} joined these folders\:\n\n{1}\nYou may wish to add him to your connections list.
@@ -514,7 +514,7 @@ dialog.delete_profile.title=Supprimer un profile de transfert particulier
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=Erreur Syst\u00e8me
-##dialog.link_folder_online.select_text=Select non-local folder
+##dialog.link_folder_online.select_text=Select folder
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 ##dialog.node_select.hide_offline.name=Hide offline
@@ -611,6 +611,7 @@ estimation.unknown=Inconnue
 ##exp_computer_view.version=Client version\: {0}
 
 ##exp_folder_view.collapse=Collapse folder details
+##exp_folder_view.deleted_files=Deleted files\: {0}
 ##exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
@@ -796,8 +797,8 @@ folder_remove.dialog.button.key=E
 folder_remove.dialog.button.name=Enlever
 #orig#folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.delete=Supprimer les meta-donn\u00e9es
-##folder_remove.dialog.remove_from_local=Stop sync locally
-##folder_remove.dialog.remove_from_os=Remove from folders
+##folder_remove.dialog.remove_from_local=Stop to sync local
+##folder_remove.dialog.remove_from_os=Remove online
 #orig#folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.sync_warning=PowerFolder est en cours de synchronisation\!
 #orig#folder_remove.dialog.text=Remove Folder {0}?
@@ -1025,7 +1026,7 @@ line_speed.unlimited=Emission illimit\u00e9e
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=Limite en \u00e9mission
 
-##link_folder.dialog.description=Select an folder to sync local.
+##link_folder.dialog.description=Which folder should be synced to this directory?
 ##link_folder.dialog.link_text=Link
 ##link_folder.dialog.title=Link to an existing folder
 
@@ -1107,13 +1108,15 @@ network_statistics_panel.public_folders_size=Taille totale de tous les dossiers 
 #orig#network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network_statistics_panel.reconnection_queue_size=Noeud pr\u00e9ents dans la file d'attente de reconnexion
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1197,7 +1200,7 @@ preferences.dialog.delta_sync=Utiliser la synchronisation diff\u00e9rentielle
 preferences.dialog.delta_sync.tooltip=Synchronise uniquement les diff\u00e9rences entre fichiers.
 #orig#preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
 preferences.dialog.dialogs.ask_to_add_friend_message=Demander d'ajouter un message personnel pour un ami
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Pr\u00e9venir pour ajouter \u00e0 la liste d'ami(e)s si un noeud devient membre d'un dossier
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=V\u00e9rifier la mise \u00e0 jour de PowerFolder
@@ -1812,6 +1815,7 @@ transfer.problem.transfer.exception=Exception d\u00e9t\u00e9ct\u00e9e sur un tra
 ##transfer_mode.disabled.name=Disabled
 ##transfer_mode.host_files.name=Share/Send
 ##transfer_mode.manual_synchronization.name=Manual sync
+##transfer_mode.meta_sync.name=Auto sync (meta)
 ##transfer_mode.no_sync.name=No sync
 
 #orig#transfers.completed=Completed {0}
@@ -1936,7 +1940,7 @@ wizard.choose_disk_location.directory_size=Dossier de taille {0}
 ##wizard.choose_disk_location.local_base.title=Base directory
 ##wizard.choose_disk_location.maual_sync=Manual sync
 ##wizard.choose_disk_location.options=Please select required options
-##wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
+##wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
 ##wizard.choose_disk_location.select=Please select the directory
 ##wizard.choose_disk_location.select_file=Select file
 ##wizard.choose_disk_location.send_invitation=Send invitation
