--- a/src/etc/Translation_it.properties
+++ b/src/etc/Translation_it.properties
@@ -676,7 +676,7 @@ dialog.already_running.start_button=Inizia comunque
 dialog.already_running.title=Gi\u00e0 in esecuzione
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning={APPNAME} \u00e8 gi\u00e0 in esecuzione\n\nConsiglio\: se riavvi {APPNAME}, \nelimina tutti i processi javaw/java e prova ancora
-#orig#dialog.ask_for_friendship.button.add=Add to connections
+#orig#dialog.ask_for_friendship.button.add=Add to computers
 dialog.ask_for_friendship.button.add=Aggiungi agli amici
 #orig#dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 dialog.ask_for_friendship.explain=Puoi facilmente modificare lo stato\n di amico usando i menu contestuali(click-tasto-destro).
@@ -765,7 +765,7 @@ dialog.delete_profile.title=Elimina modalit\u00e0 di trasferimento personalizzat
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=Errore Fatale
-##dialog.link_folder_online.select_text=Select non-local folder
+##dialog.link_folder_online.select_text=Select folder
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 #orig#dialog.node_select.hide_offline.name=Hide offline
@@ -914,6 +914,7 @@ exp_computer_view.version=Versione Client\: {0}
 
 #orig#exp_folder_view.collapse=Collapse folder details
 exp_folder_view.collapse=Collassa dettagli cartella
+##exp_folder_view.deleted_files=Deleted files\: {0}
 #orig#exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 exp_folder_view.estimated_synchronized=Stima sincronizzati\: {0}
 #orig#exp_folder_view.expand=Expand folder details
@@ -1212,9 +1213,9 @@ folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=Remove
 #orig#folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.delete=Elimina metadati
-#orig#folder_remove.dialog.remove_from_local=Stop sync locally
+#orig#folder_remove.dialog.remove_from_local=Stop to sync local
 folder_remove.dialog.remove_from_local=Ferma la sincronizzazione locale
-##folder_remove.dialog.remove_from_os=Remove from folders
+##folder_remove.dialog.remove_from_os=Remove online
 #orig#folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.sync_warning={APPNAME} sta effettuando la sincronizzazione\!
 #orig#folder_remove.dialog.text=Remove Folder {0}?
@@ -1475,7 +1476,7 @@ line_speed.unlimited=Upload illimitato
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=Limite di Upload
 
-##link_folder.dialog.description=Select an folder to sync local.
+##link_folder.dialog.description=Which folder should be synced to this directory?
 ##link_folder.dialog.link_text=Link
 ##link_folder.dialog.title=Link to an existing folder
 
@@ -1568,13 +1569,15 @@ network_statistics_panel.public_folders_size=Dimensione totale di tutti i file d
 #orig#network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network_statistics_panel.reconnection_queue_size=Nodi nella coda di riconnessione
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1676,7 +1679,7 @@ preferences.dialog.delta_sync=Utilizza delta sync
 preferences.dialog.delta_sync.tooltip=Sincronizza solo le parti di file modificate.
 #orig#preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
 preferences.dialog.dialogs.ask_to_add_friend_message=Chiedi di aggiungere un messaggio personale per l'amico
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Chiedi di aggiungere agli amici se un nodo diventa membro di una cartella
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=Controlla aggiornamenti per {APPNAME}
@@ -2499,6 +2502,7 @@ transfer_mode.disabled.name=Disabilitato
 transfer_mode.host_files.name=Condividi/Invia
 #orig#transfer_mode.manual_synchronization.name=Manual sync
 transfer_mode.manual_synchronization.name=Sincronizzazione manuale
+##transfer_mode.meta_sync.name=Auto sync (meta)
 #orig#transfer_mode.no_sync.name=No sync
 transfer_mode.no_sync.name=Nessuna sincronizzazione
 
@@ -2657,7 +2661,7 @@ wizard.choose_disk_location.local_base.title=Directory Base
 wizard.choose_disk_location.maual_sync=Sincronizzazione manuale
 #orig#wizard.choose_disk_location.options=Please select required options
 wizard.choose_disk_location.options=Si prega di selezionare le opzioni richieste
-#orig#wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
+#orig#wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
 wizard.choose_disk_location.os_over_size=Attenzione - la capacit\u00e0 della Memorizzazione Online potrebbe essere ecceduta
 #orig#wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select=Si prega di selezionare la directory
