--- a/src/etc/Translation_ja.properties
+++ b/src/etc/Translation_ja.properties
@@ -443,7 +443,7 @@ dialog.already_running.start_button=\u8d77\u52d5\u7d9a\u884c
 dialog.already_running.title=\u3059\u3067\u306b\u7a3c\u50cd\u4e2d
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder \u306f\u3059\u3067\u306b\u7a3c\u52d5\u3057\u3066\u3044\u307e\u3059\u3002\n\n\u30d2\u30f3\u30c8\:  PowerFolder \u306e\u518d\u8d77\u52d5\u3092\u884c\u3063\u3066\u3044\u305f\u5834\u5408\u306f\u3001\njavaw/java \u30d7\u30ed\u30bb\u30b9\u3092\u3059\u3079\u3066\u505c\u6b62\u3057\u3066\u304b\u3089\u3001\u3082\u3046\u4e00\u5ea6\u8a66\u3057\u3066\u304f\u3060\u3055\u3044\u3002
-##dialog.ask_for_friendship.button.add=Add to connections
+##dialog.ask_for_friendship.button.add=Add to computers
 ##dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 ##dialog.ask_for_friendship.message_title=Message from {0}
 ##dialog.ask_for_friendship.question={0} joined these folders\:\n\n{1}\nYou may wish to add him to your connections list.
@@ -514,7 +514,7 @@ dialog.delete_profile.title=\u30ab\u30b9\u30bf\u30e0\u306e\u8ee2\u9001\u30e2\u30
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=\u81f4\u547d\u7684\u306a\u30a8\u30e9\u30fc
-##dialog.link_folder_online.select_text=Select non-local folder
+##dialog.link_folder_online.select_text=Select folder
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 ##dialog.node_select.hide_offline.name=Hide offline
@@ -611,6 +611,7 @@ estimation.unknown=\u4e0d\u660e
 ##exp_computer_view.version=Client version\: {0}
 
 ##exp_folder_view.collapse=Collapse folder details
+##exp_folder_view.deleted_files=Deleted files\: {0}
 ##exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
@@ -796,8 +797,8 @@ folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=\u524a\u9664(R)
 #orig#folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.delete=\u30e1\u30bf\u30c7\u30fc\u30bf\u3092\u524a\u9664
-##folder_remove.dialog.remove_from_local=Stop sync locally
-##folder_remove.dialog.remove_from_os=Remove from folders
+##folder_remove.dialog.remove_from_local=Stop to sync local
+##folder_remove.dialog.remove_from_os=Remove online
 #orig#folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.sync_warning=\u30d1\u30ef\u30fc\u30d5\u30a9\u30eb\u30c0\u306f\u73fe\u5728\u540c\u671f\u4e2d\u3067\u3059\uff01
 #orig#folder_remove.dialog.text=Remove Folder {0}?
@@ -1024,7 +1025,7 @@ line_speed.unlimited=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u901f\u5ea6 \u7121\u52
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=\u30a2\u30c3\u30d7\u30ed\u30fc\u30c9\u901f\u5ea6\u4e0a\u9650
 
-##link_folder.dialog.description=Select an folder to sync local.
+##link_folder.dialog.description=Which folder should be synced to this directory?
 ##link_folder.dialog.link_text=Link
 ##link_folder.dialog.title=Link to an existing folder
 
@@ -1106,13 +1107,15 @@ network_statistics_panel.public_folders_size=\u53d6\u5f97\u53ef\u80fd\u5168\u30d
 #orig#network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network_statistics_panel.reconnection_queue_size=\u518d\u63a5\u7d9a\u9806\u756a\u5f85\u3061\u30ce\u30fc\u30c9\u6570
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1196,7 +1199,7 @@ preferences.dialog.delta_sync=\u30c7\u30eb\u30bf\u540c\u671f\u3092\u4f7f\u7528
 preferences.dialog.delta_sync.tooltip=\u5909\u66f4\u30d5\u30a1\u30a4\u30eb\u5168\u4f53\u3067\u306f\u306a\u304f\u3001\u305d\u306e\u5dee\u5206\u306e\u307f\u3092\u540c\u671f\u3057\u307e\u3059\u3002
 #orig#preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
 preferences.dialog.dialogs.ask_to_add_friend_message=\u53cb\u4eba\u5b9b\u3066\u306e\u500b\u4eba\u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u8ffd\u52a0\u3059\u308b\u304b\u78ba\u8a8d
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u30ce\u30fc\u30c9\u304c\u30d5\u30a9\u30eb\u30c0\u306e\u30e1\u30f3\u30d0\u30fc\u306b\u306a\u308b\u5834\u5408\u306b\u53cb\u4eba\u30ea\u30b9\u30c8\u3078\u8ffd\u52a0\u3059\u308b\u304b\u78ba\u8a8d
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=PowerFolder \u672c\u4f53\u30d7\u30ed\u30b0\u30e9\u30e0\u306e\u66f4\u65b0\u3092\u30c1\u30a7\u30c3\u30af
@@ -1807,6 +1810,7 @@ transfer.problem.transfer.exception=\u8ee2\u9001\u306b\u95a2\u3059\u308b\u4f8b\u
 ##transfer_mode.disabled.name=Disabled
 ##transfer_mode.host_files.name=Share/Send
 ##transfer_mode.manual_synchronization.name=Manual sync
+##transfer_mode.meta_sync.name=Auto sync (meta)
 ##transfer_mode.no_sync.name=No sync
 
 #orig#transfers.completed=Completed {0}
@@ -1929,7 +1933,7 @@ wizard.choose_disk_location.directory_size=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\
 ##wizard.choose_disk_location.local_base.title=Base directory
 ##wizard.choose_disk_location.maual_sync=Manual sync
 ##wizard.choose_disk_location.options=Please select required options
-##wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
+##wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
 ##wizard.choose_disk_location.select=Please select the directory
 ##wizard.choose_disk_location.select_file=Select file
 ##wizard.choose_disk_location.send_invitation=Send invitation
