--- a/src/etc/Translation_nl.properties
+++ b/src/etc/Translation_nl.properties
@@ -433,7 +433,7 @@ dialog.already_running.start_button=Start geforceerd
 dialog.already_running.title=al gestart
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder is al gestart\n\nHint\: Als u PowerFolder opnieuw heeft gestart, \nVerwijder alle javaw/java processen en probeer opnieuw
-##dialog.ask_for_friendship.button.add=Add to connections
+##dialog.ask_for_friendship.button.add=Add to computers
 ##dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 ##dialog.ask_for_friendship.message_title=Message from {0}
 ##dialog.ask_for_friendship.question={0} joined these folders\:\n\n{1}\nYou may wish to add him to your connections list.
@@ -486,7 +486,7 @@ dialog.connection_problem=Verbindingsprobleem
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=Fatale Fout
-##dialog.link_folder_online.select_text=Select non-local folder
+##dialog.link_folder_online.select_text=Select folder
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 ##dialog.node_select.hide_offline.name=Hide offline
@@ -573,6 +573,7 @@ dialog.unable_to_open_port=Kan lokale poort {0} niet openen, PowerFolder is miss
 ##exp_computer_view.version=Client version\: {0}
 
 ##exp_folder_view.collapse=Collapse folder details
+##exp_folder_view.deleted_files=Deleted files\: {0}
 ##exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
@@ -748,8 +749,8 @@ folder_panel.settings_tab.removebutton.name=Verwijder
 ##folder_remove.dialog.button.key=R
 ##folder_remove.dialog.button.name=Remove
 ##folder_remove.dialog.delete=Delete meta-data
-##folder_remove.dialog.remove_from_local=Stop sync locally
-##folder_remove.dialog.remove_from_os=Remove from folders
+##folder_remove.dialog.remove_from_local=Stop to sync local
+##folder_remove.dialog.remove_from_os=Remove online
 ##folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 ##folder_remove.dialog.text=Remove Folder {0}?
 ##folder_remove.dialog.title=Remove Folder {0}?
@@ -944,7 +945,7 @@ line_speed.unlimited=Unlimited upload
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=Upload limiet
 
-##link_folder.dialog.description=Select an folder to sync local.
+##link_folder.dialog.description=Which folder should be synced to this directory?
 ##link_folder.dialog.link_text=Link
 ##link_folder.dialog.title=Link to an existing folder
 
@@ -1019,13 +1020,15 @@ network_statistics_panel.public_folder_count=Aantal publieke folders (niet lid)
 network_statistics_panel.public_folders_size=Totale omvang van alle beschikbare bestanden
 ##network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1102,7 +1105,7 @@ preferences.dialog.create_desktop_shortcuts=Maak bureaublad snelkoppelingen
 ##preferences.dialog.delta_sync=Delta sync
 ##preferences.dialog.delta_sync.tooltip=Sync only the changes in files
 ##preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Vraag om toevoegen aan vrienden als een gebruiker lid wordt van een folder
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=Check voor PowerFolder programma updates
@@ -1630,6 +1633,7 @@ systray.tooltip.up.mb=Up {0} MBs
 ##transfer_mode.disabled.name=Disabled
 ##transfer_mode.host_files.name=Share/Send
 ##transfer_mode.manual_synchronization.name=Manual sync
+##transfer_mode.meta_sync.name=Auto sync (meta)
 ##transfer_mode.no_sync.name=No sync
 
 #orig#transfers.completed=Completed {0}
@@ -1731,7 +1735,7 @@ wizard.basic_setup.title=Basis Setup
 ##wizard.choose_disk_location.local_base.title=Base directory
 ##wizard.choose_disk_location.maual_sync=Manual sync
 ##wizard.choose_disk_location.options=Please select required options
-##wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
+##wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
 #orig#wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select=Selecteer map
 ##wizard.choose_disk_location.select_file=Select file
