--- a/src/etc/Translation_pl.properties
+++ b/src/etc/Translation_pl.properties
@@ -438,7 +438,7 @@ dialog.already_running.start_button=Uruchom
 dialog.already_running.title=Program jest ju\u017c uruchomiony
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder jest ju\u017c uruchomiony\n\nPodpowied\u017a\: Je\u015bli PowerFolder zosta\u0142 uruchomiony ponownie, \nzamknij wszystkie procesy javaw/java i spr\u00f3buj ponownie
-##dialog.ask_for_friendship.button.add=Add to connections
+##dialog.ask_for_friendship.button.add=Add to computers
 ##dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 ##dialog.ask_for_friendship.message_title=Message from {0}
 ##dialog.ask_for_friendship.question={0} joined these folders\:\n\n{1}\nYou may wish to add him to your connections list.
@@ -491,7 +491,7 @@ dialog.connection_problem=Problem z po\u0142\u0105czeniem
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=B\u0142\u0105d krytyczny
-##dialog.link_folder_online.select_text=Select non-local folder
+##dialog.link_folder_online.select_text=Select folder
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 ##dialog.node_select.hide_offline.name=Hide offline
@@ -582,6 +582,7 @@ dialog.unable_to_open_port=Nie mo\u017cna otworzy\u0107 lokalnego portu {0}, by\
 ##exp_computer_view.version=Client version\: {0}
 
 ##exp_folder_view.collapse=Collapse folder details
+##exp_folder_view.deleted_files=Deleted files\: {0}
 ##exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
@@ -757,8 +758,8 @@ folder_panel.settings_tab.removebutton.name=Usu\u0144
 ##folder_remove.dialog.button.key=R
 ##folder_remove.dialog.button.name=Remove
 ##folder_remove.dialog.delete=Delete meta-data
-##folder_remove.dialog.remove_from_local=Stop sync locally
-##folder_remove.dialog.remove_from_os=Remove from folders
+##folder_remove.dialog.remove_from_local=Stop to sync local
+##folder_remove.dialog.remove_from_os=Remove online
 ##folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 ##folder_remove.dialog.text=Remove Folder {0}?
 ##folder_remove.dialog.title=Remove Folder {0}?
@@ -966,7 +967,7 @@ line_speed.unlimited=Bez limitu
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=Limit wysy\u0142ania
 
-##link_folder.dialog.description=Select an folder to sync local.
+##link_folder.dialog.description=Which folder should be synced to this directory?
 ##link_folder.dialog.link_text=Link
 ##link_folder.dialog.title=Link to an existing folder
 
@@ -1048,13 +1049,15 @@ network_statistics_panel.public_folders_size=Ca\u0142kowity rozmiar dost\u0119pn
 #orig#network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network_statistics_panel.reconnection_queue_size=W\u0119z\u0142y w kolejce do ponownego po\u0142\u0105czenia
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1133,7 +1136,7 @@ preferences.dialog.delta_sync=U\u017cywaj synchronizacji delta
 #orig#preferences.dialog.delta_sync.tooltip=Sync only the changes in files
 preferences.dialog.delta_sync.tooltip=Synchronizuje tylko zmienione cz\u0119\u015bci plik\u00f3w.
 ##preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Zapytaj, czy doda\u0107 do listy znajomych, gdy w\u0119ze\u0142 staje si\u0119 cz\u0142onkiem folderu
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=Sprawdzaj aktualizacje programu PowerFolder
@@ -1691,6 +1694,7 @@ transfer.problem.transfer.exception=Wyst\u0105pi\u0142 wyj\u0105tek\: TransferEx
 ##transfer_mode.disabled.name=Disabled
 ##transfer_mode.host_files.name=Share/Send
 ##transfer_mode.manual_synchronization.name=Manual sync
+##transfer_mode.meta_sync.name=Auto sync (meta)
 ##transfer_mode.no_sync.name=No sync
 
 #orig#transfers.completed=Completed {0}
@@ -1812,7 +1816,7 @@ wizard.basic_setup.upload.title=Nieograniczona pr\u0119dko\u015b\u0107 po\u0142\
 ##wizard.choose_disk_location.local_base.title=Base directory
 ##wizard.choose_disk_location.maual_sync=Manual sync
 ##wizard.choose_disk_location.options=Please select required options
-##wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
+##wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
 #orig#wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select=Wybierz folder
 ##wizard.choose_disk_location.select_file=Select file
