--- a/src/etc/Translation_pt.properties
+++ b/src/etc/Translation_pt.properties
@@ -435,7 +435,7 @@ dialog.already_running.start_button=Iniciar mesmo assim
 dialog.already_running.title=J\u00e1 em execu\u00e7\u00e3o
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder j\u00e1 est\u00e1 em execu\u00e7\u00e3o\n\nDica\: Se voc\u00ea reiniciou o PowerFolder, \ntermine todos os processos javaw/java e tente novamente
-##dialog.ask_for_friendship.button.add=Add to connections
+##dialog.ask_for_friendship.button.add=Add to computers
 ##dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 ##dialog.ask_for_friendship.message_title=Message from {0}
 ##dialog.ask_for_friendship.question={0} joined these folders\:\n\n{1}\nYou may wish to add him to your connections list.
@@ -488,7 +488,7 @@ dialog.connection_problem=Problema na conex\u00e3o
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=Erro fatal
-##dialog.link_folder_online.select_text=Select non-local folder
+##dialog.link_folder_online.select_text=Select folder
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 ##dialog.node_select.hide_offline.name=Hide offline
@@ -581,6 +581,7 @@ estimation.unknown=desconhecido
 ##exp_computer_view.version=Client version\: {0}
 
 ##exp_folder_view.collapse=Collapse folder details
+##exp_folder_view.deleted_files=Deleted files\: {0}
 ##exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
@@ -762,8 +763,8 @@ folder_panel.settings_tab.removebutton.name=Remover
 ##folder_remove.dialog.button.key=R
 ##folder_remove.dialog.button.name=Remove
 ##folder_remove.dialog.delete=Delete meta-data
-##folder_remove.dialog.remove_from_local=Stop sync locally
-##folder_remove.dialog.remove_from_os=Remove from folders
+##folder_remove.dialog.remove_from_local=Stop to sync local
+##folder_remove.dialog.remove_from_os=Remove online
 ##folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 ##folder_remove.dialog.text=Remove Folder {0}?
 ##folder_remove.dialog.title=Remove Folder {0}?
@@ -982,7 +983,7 @@ line_speed.unlimited=Ilimitado
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=Limite para Envios
 
-##link_folder.dialog.description=Select an folder to sync local.
+##link_folder.dialog.description=Which folder should be synced to this directory?
 ##link_folder.dialog.link_text=Link
 ##link_folder.dialog.title=Link to an existing folder
 
@@ -1064,13 +1065,15 @@ network_statistics_panel.public_folders_size=Tamanho total de todos os arquivos 
 #orig#network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network_statistics_panel.reconnection_queue_size=N\u00f3s na fila de reconex\u00e3o
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1150,7 +1153,7 @@ preferences.dialog.delta_sync=Usar sincroniza\u00e7\u00e3o pela diferen\u00e7a
 preferences.dialog.delta_sync.tooltip=Sincronizar apenas partes alteradas do arquivo.
 #orig#preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
 preferences.dialog.dialogs.ask_to_add_friend_message=Perguntar para adicionar mensagem pessoal a amigo
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Perguntar para adicionar em amigos se um n\u00f3 se tornar um membro de uma pasta
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=Verificar se h\u00e1 atualiza\u00e7\u00f5es para o programa do PowerFolder
@@ -1714,6 +1717,7 @@ transfer.problem.transfer.exception=Ocorreu um erro de tranfer\u00eancia\: {0}
 ##transfer_mode.disabled.name=Disabled
 ##transfer_mode.host_files.name=Share/Send
 ##transfer_mode.manual_synchronization.name=Manual sync
+##transfer_mode.meta_sync.name=Auto sync (meta)
 ##transfer_mode.no_sync.name=No sync
 
 #orig#transfers.completed=Completed {0}
@@ -1835,7 +1839,7 @@ wizard.basic_setup.upload.title=Velocidade ilimitada de conex\u00e3o
 ##wizard.choose_disk_location.local_base.title=Base directory
 ##wizard.choose_disk_location.maual_sync=Manual sync
 ##wizard.choose_disk_location.options=Please select required options
-##wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
+##wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
 ##wizard.choose_disk_location.select=Please select the directory
 ##wizard.choose_disk_location.select_file=Select file
 ##wizard.choose_disk_location.send_invitation=Send invitation
