--- a/src/etc/Translation_zh.properties
+++ b/src/etc/Translation_zh.properties
@@ -679,7 +679,7 @@ dialog.already_running.start_button=\u65e0\u8bba\u5982\u4f55\u7ee7\u7eed
 dialog.already_running.title=\u5df2\u7ecf\u8fd0\u884c
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning={APPNAME}\u5df2\u7ecf\u8fd0\u884c\r\n\r\n\u63d0\u793a\uff1a\u5982\u679c\u4f60\u60f3\u91cd\u542fPowerFolder\uff0c\r\n\u5173\u95ed\u6240\u6709javaw/java\u8fdb\u7a0b\u5e76\u91cd\u8bd5
-#orig#dialog.ask_for_friendship.button.add=Add to connections
+#orig#dialog.ask_for_friendship.button.add=Add to computers
 dialog.ask_for_friendship.button.add=\u6dfb\u52a0\u4e3a\u597d\u53cb
 #orig#dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 dialog.ask_for_friendship.explain=\u4f60\u53ef\u4ee5\u4f7f\u7528\u53f3\u952e\u83dc\u5355\n\u8f7b\u677e\u5730\u6539\u53d8\u597d\u53cb\u72b6\u6001\u3002
@@ -771,7 +771,7 @@ dialog.directorychooser.new.problem=\u521b\u5efa\u76ee\u5f55\u51fa\u9519\n\n{0}
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=\u53d1\u751f\u4e25\u91cd\u9519\u8bef
-##dialog.link_folder_online.select_text=Select non-local folder
+##dialog.link_folder_online.select_text=Select folder
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 #orig#dialog.node_select.hide_offline.name=Hide offline
@@ -920,6 +920,7 @@ exp_computer_view.version=\u5ba2\u6237\u7aef\u7248\u672c\: {0}
 
 #orig#exp_folder_view.collapse=Collapse folder details
 exp_folder_view.collapse=\u9690\u85cf\u6587\u4ef6\u5939\u8be6\u60c5
+##exp_folder_view.deleted_files=Deleted files\: {0}
 #orig#exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 exp_folder_view.estimated_synchronized=\u4f30\u8ba1\u5df2\u7ecf\u540c\u6b65\: {0}
 #orig#exp_folder_view.expand=Expand folder details
@@ -1218,9 +1219,9 @@ folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=\u79fb\u9664
 #orig#folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.delete=\u5220\u9664\u5143\u6570\u636e
-#orig#folder_remove.dialog.remove_from_local=Stop sync locally
+#orig#folder_remove.dialog.remove_from_local=Stop to sync local
 folder_remove.dialog.remove_from_local=\u505c\u6b62\u672c\u5730\u540c\u6b65
-##folder_remove.dialog.remove_from_os=Remove from folders
+##folder_remove.dialog.remove_from_os=Remove online
 #orig#folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.sync_warning={APPNAME}\u6b63\u5728\u540c\u6b65\uff01
 #orig#folder_remove.dialog.text=Remove Folder {0}?
@@ -1481,7 +1482,7 @@ line_speed.unlimited=\u4e0d\u9650\u901f
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=\u4e0a\u4f20
 
-##link_folder.dialog.description=Select an folder to sync local.
+##link_folder.dialog.description=Which folder should be synced to this directory?
 ##link_folder.dialog.link_text=Link
 ##link_folder.dialog.title=Link to an existing folder
 
@@ -1580,13 +1581,15 @@ network_statistics_panel.public_folders_size=\u6709\u6548\u6587\u4ef6\u603b\u592
 #orig#network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network_statistics_panel.reconnection_queue_size=\u5728\u91cd\u65b0\u8fde\u63a5\u961f\u5217\u4e2d\u7684\u8ba1\u7b97\u673a
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1688,7 +1691,7 @@ preferences.dialog.delta_sync=\u4f7f\u7528\u4e09\u65b9\u540c\u6b65
 preferences.dialog.delta_sync.tooltip=\u53ea\u540c\u6b65\u4fee\u6539\u7684\u6587\u4ef6\u90e8\u5206\u3002
 #orig#preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
 preferences.dialog.dialogs.ask_to_add_friend_message=\u8be2\u95ee\u662f\u5426\u7ed9\u597d\u53cb\u7559\u8a00
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u5f53\u5176\u4ed6\u7528\u6237\u52a0\u5165\u6587\u4ef6\u5939\u65f6\uff0c\u63d0\u793a\u662f\u5426\u6dfb\u52a0\u4e3a\u597d\u53cb
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=\u68c0\u67e5PowerFolder\u7a0b\u5e8f\u66f4\u65b0
@@ -2513,6 +2516,7 @@ transfer_mode.disabled.name=\u7981\u7528
 transfer_mode.host_files.name=\u5171\u4eab/\u53d1\u9001
 #orig#transfer_mode.manual_synchronization.name=Manual sync
 transfer_mode.manual_synchronization.name=\u624b\u52a8\u540c\u6b65
+##transfer_mode.meta_sync.name=Auto sync (meta)
 #orig#transfer_mode.no_sync.name=No sync
 transfer_mode.no_sync.name=\u4e0d\u540c\u6b65
 
@@ -2671,7 +2675,7 @@ wizard.choose_disk_location.local_base.title=\u4e3b\u76ee\u5f55
 wizard.choose_disk_location.maual_sync=\u624b\u52a8\u540c\u6b65
 #orig#wizard.choose_disk_location.options=Please select required options
 wizard.choose_disk_location.options=\u8bf7\u9009\u62e9\u8981\u6c42\u7684\u9009\u9879
-#orig#wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
+#orig#wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
 wizard.choose_disk_location.os_over_size=\u8b66\u544a - \u53ef\u80fd\u5df2\u7ecf\u8d85\u8fc7\u5728\u7ebf\u5b58\u50a8\u7684\u5bb9\u91cf
 #orig#wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select=\u8bf7\u9009\u62e9\u76ee\u5f55
