--- a/src/etc/Translation_ar.properties
+++ b/src/etc/Translation_ar.properties
@@ -433,7 +433,7 @@ dialog.already_running.start_button=\u0627\u0628\u062f\u0623 \u0628\u0623\u064a 
 dialog.already_running.title=\u062c\u0627\u0631\u064d \u062d\u0627\u0644\u064a\u0627\u064b
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning={APPNAME} \u062c\u0627\u0631\u064d \u062d\u0627\u0644\u064a\u0627\u064b \n\n\u062a\u0644\u0645\u064a\u062d\: \u0625\u0630\u0627 \u0642\u0645\u062a \u0628\u0625\u0639\u0627\u062f\u0629 \u062a\u0634\u063a\u064a\u0644 {APPNAME}, \n\u0627\u063a\u0644\u0642 \u0643\u0644 \u062a\u0637\u0628\u064a\u0642\u0627\u062a \u0627\u0644\u062c\u0627\u0641\u0627w/\u0627\u063a\u0644\u0642 \u0643\u0644 \u062a\u0637\u0628\u064a\u0642\u0627\u062a \u0627\u0644\u062c\u0627\u0641\u0627 \u0648\u062d\u0627\u0648\u0644 \u0645\u0646 \u062c\u062f\u064a\u062f
-##dialog.ask_for_friendship.button.add=Add to connections
+##dialog.ask_for_friendship.button.add=Add to computers
 ##dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 ##dialog.ask_for_friendship.message_title=Message from {0}
 ##dialog.ask_for_friendship.question={0} joined these folders\:\n\n{1}\nYou may wish to add him to your connections list.
@@ -486,7 +486,7 @@ dialog.connection_problem=\u0645\u0634\u0643\u0644\u0629 \u0625\u062a\u0635\u062
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=\u062e\u0637\u0623 \u062c\u0633\u064a\u0645
-##dialog.link_folder_online.select_text=Select non-local folder
+##dialog.link_folder_online.select_text=Select folder
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 ##dialog.node_select.hide_offline.name=Hide offline
@@ -577,6 +577,7 @@ dialog.unable_to_open_port=\u063a\u064a\u0631 \u0642\u0627\u062f\u0631 \u0639\u0
 ##exp_computer_view.version=Client version\: {0}
 
 ##exp_folder_view.collapse=Collapse folder details
+##exp_folder_view.deleted_files=Deleted files\: {0}
 ##exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
@@ -752,8 +753,8 @@ folder_panel.settings_tab.removebutton.name=\u0625\u0632\u0627\u0644\u0629
 ##folder_remove.dialog.button.key=R
 ##folder_remove.dialog.button.name=Remove
 ##folder_remove.dialog.delete=Delete meta-data
-##folder_remove.dialog.remove_from_local=Stop sync locally
-##folder_remove.dialog.remove_from_os=Remove from folders
+##folder_remove.dialog.remove_from_local=Stop to sync local
+##folder_remove.dialog.remove_from_os=Remove online
 ##folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 ##folder_remove.dialog.text=Remove Folder {0}?
 ##folder_remove.dialog.title=Remove Folder {0}?
@@ -957,7 +958,7 @@ line_speed.unlimited=\u063a\u064a\u0631 \u0645\u062d\u062f\u0648\u062f
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=\u0627\u0644\u062d\u062f \u0627\u0644\u0627\u0642\u0635\u0649 \u0644\u0644\u0631\u0641\u0639
 
-##link_folder.dialog.description=Select an folder to sync local.
+##link_folder.dialog.description=Which folder should be synced to this directory?
 ##link_folder.dialog.link_text=Link
 ##link_folder.dialog.title=Link to an existing folder
 
@@ -1032,13 +1033,15 @@ network_statistics_panel.public_folders_size=\u0627\u0644\u062d\u062c\u0645 \u06
 #orig#network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network_statistics_panel.reconnection_queue_size=\u0627\u0644\u0625\u0631\u062a\u0628\u0627\u0637 \u0641\u064a \u0635\u0646\u062f\u0648\u0642 \u0625\u0639\u0627\u062f\u0629 \u0627\u0644\u0625\u062a\u0635\u0627\u0644
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1117,7 +1120,7 @@ preferences.dialog.delta_sync=\u0625\u0633\u062a\u062e\u062f\u0627\u0645 \u0645\
 #orig#preferences.dialog.delta_sync.tooltip=Sync only the changes in files
 preferences.dialog.delta_sync.tooltip=\u0645\u0632\u0627\u0645\u0646\u0629 \u0641\u0642\u0637 \u0627\u0644\u0627\u0642\u0633\u0627\u0645 \u0627\u0644\u0645\u062a\u063a\u064a\u0631\u0629 \u0645\u0646 \u0627\u0644\u0645\u0644\u0641\u0627\u062a .
 ##preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u0627\u0633\u0626\u0644 \u0639\u0646 \u0625\u0645\u0643\u0627\u0646\u064a\u0629 \u0627\u0644\u0627\u0636\u0627\u0641\u0629 \u0627\u0644\u0649 \u0627\u0644\u0627\u0635\u062f\u0642\u0627\u0621 \u0625\u0630\u0627 \u0627\u0635\u0628\u062d \u0627\u0644\u0645\u0648\u0635\u0651\u0644 \u0639\u0636\u0648\u0627 \u0641\u064a \u0627\u0644\u0645\u062c\u0644\u062f
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=\u0627\u0644\u062a\u0623\u0643\u062f \u0645\u0646 \u0648\u062c\u0648\u062f \u062a\u062d\u062f\u064a\u062b \u0644\u0628\u0631\u0646\u0627\u0645\u062c {APPNAME}
@@ -1665,6 +1668,7 @@ transfer.problem.transfer.exception=\u0643\u0627\u0646 \u0647\u0646\u0627\u0643 
 ##transfer_mode.disabled.name=Disabled
 ##transfer_mode.host_files.name=Share/Send
 ##transfer_mode.manual_synchronization.name=Manual sync
+##transfer_mode.meta_sync.name=Auto sync (meta)
 ##transfer_mode.no_sync.name=No sync
 
 #orig#transfers.completed=Completed {0}
@@ -1769,7 +1773,7 @@ wizard.basic_setup.title=\u0627\u0644\u062a\u0643\u0648\u064a\u0646 \u0627\u0644
 ##wizard.choose_disk_location.local_base.title=Base directory
 ##wizard.choose_disk_location.maual_sync=Manual sync
 ##wizard.choose_disk_location.options=Please select required options
-##wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
+##wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
 #orig#wizard.choose_disk_location.select=Please select the directory
 wizard.choose_disk_location.select=\u0623\u062e\u062a\u0631 \u0645\u0633\u0627\u0631\u0627\u064b
 ##wizard.choose_disk_location.select_file=Select file
