--- a/src/etc/Translation_ru.properties
+++ b/src/etc/Translation_ru.properties
@@ -443,7 +443,7 @@ dialog.already_running.start_button=\u0417\u0430\u043f\u0443\u0441\u0442\u0438\u
 dialog.already_running.title=\u0423\u0436\u0435 \u0437\u0430\u043f\u0443\u0449\u0435\u043d
 #orig#dialog.already_running.warning={APPNAME} already running\n\nHint\: If you restarted {APPNAME}, \nkill all javaw/java processes and try again
 dialog.already_running.warning=PowerFolder \u0443\u0436\u0435 \u0437\u0430\u043f\u0443\u0449\u0435\u043d.\n\n \u0415\u0441\u043b\u0438 \u0432\u044b \u0431\u0435\u0437\u0443\u0441\u043f\u0435\u0448\u043d\u043e \u043f\u0435\u0440\u0435\u0437\u0430\u043f\u0443\u0441\u0442\u0438\u043b\u0438 PowerFolder, \n\u0437\u0430\u0432\u0435\u0440\u0448\u0438\u0442\u0435 \u0432\u0441\u0435 javaw/java \u043f\u0440\u043e\u0446\u0435\u0441\u0441\u044b \u0438 \u043f\u043e\u043f\u044b\u0442\u0430\u0439\u0442\u0435\u0441\u044c \u0441\u043d\u043e\u0432\u0430
-##dialog.ask_for_friendship.button.add=Add to connections
+##dialog.ask_for_friendship.button.add=Add to computers
 ##dialog.ask_for_friendship.explain={APPNAME} automatically connects\nto computers on your connections list.
 ##dialog.ask_for_friendship.message_title=Message from {0}
 ##dialog.ask_for_friendship.question={0} joined these folders\:\n\n{1}\nYou may wish to add him to your connections list.
@@ -514,7 +514,7 @@ dialog.delete_profile.title=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u0441\u0
 ##dialog.directorychooser.use_classic=Classic Browser
 #orig#dialog.fatal_error.title=Fatal Error
 dialog.fatal_error.title=\u041a\u0440\u0438\u0442\u0438\u0447\u0435\u0441\u043a\u0430\u044f \u043e\u0448\u0438\u0431\u043a\u0430
-##dialog.link_folder_online.select_text=Select non-local folder
+##dialog.link_folder_online.select_text=Select folder
 ##dialog.new-directory-creator.text=New directory
 ##dialog.new-directory-creator.title=New directory
 ##dialog.node_select.hide_offline.name=Hide offline
@@ -611,6 +611,7 @@ estimation.unknown=\u043d\u0435\u0438\u0437\u0432\u0435\u0441\u0442\u043d\u043e
 ##exp_computer_view.version=Client version\: {0}
 
 ##exp_folder_view.collapse=Collapse folder details
+##exp_folder_view.deleted_files=Deleted files\: {0}
 ##exp_folder_view.estimated_synchronized=Estimated sync\: {0}
 ##exp_folder_view.expand=Expand folder details
 ##exp_folder_view.files=Files\: {0}
@@ -796,8 +797,8 @@ folder_remove.dialog.button.key=R
 folder_remove.dialog.button.name=\u0423\u0434\u0430\u043b\u0438\u0442\u044c
 #orig#folder_remove.dialog.delete=Delete meta-data
 folder_remove.dialog.delete=\u0423\u0434\u0430\u043b\u0438\u0442\u044c \u043c\u0435\u0442\u0430\u0434\u0430\u043d\u043d\u044b\u0435
-##folder_remove.dialog.remove_from_local=Stop sync locally
-##folder_remove.dialog.remove_from_os=Remove from folders
+##folder_remove.dialog.remove_from_local=Stop to sync local
+##folder_remove.dialog.remove_from_os=Remove online
 #orig#folder_remove.dialog.sync_warning=The Folder is currently syncing\!
 folder_remove.dialog.sync_warning=PowerFolder \u0441\u0435\u0439\u0447\u0430\u0441 \u0441\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u0443\u0435\u0442\u0441\u044f\!
 #orig#folder_remove.dialog.text=Remove Folder {0}?
@@ -1023,7 +1024,7 @@ line_speed.unlimited=\u041d\u0435\u043e\u0433\u0440\u0430\u043d\u0438\u0447\u043
 #orig#line_speed.upload_speed=Upload
 line_speed.upload_speed=\u041e\u0433\u0440\u0430\u043d\u0438\u0447\u0435\u043d\u0438\u0435 \u043d\u0430 \u0437\u0430\u0433\u0440\u0443\u0437\u043a\u0443
 
-##link_folder.dialog.description=Select an folder to sync local.
+##link_folder.dialog.description=Which folder should be synced to this directory?
 ##link_folder.dialog.link_text=Link
 ##link_folder.dialog.title=Link to an existing folder
 
@@ -1105,13 +1106,15 @@ network_statistics_panel.public_folders_size=\u0420\u0430\u0437\u043c\u0435\u044
 #orig#network_statistics_panel.reconnection_queue_size=Computers in reconnection queue
 network_statistics_panel.reconnection_queue_size=\u0423\u0437\u043b\u043e\u0432 \u0432 \u0441\u043f\u0438\u0441\u043a\u0435 \u043d\u0430 \u043f\u0435\u0440\u0435\u043f\u043e\u0434\u043a\u043b\u044e\u0447\u0435\u043d\u0438\u0435
 
-##notice.ask_for_friendship.summary=You have received a friendship request from {0}.
+##notice.ask_for_friendship.summary=Friendship request from {0}.
 ##notice.ask_for_friendship.title=Request for Friendship
-##notice.invitation.summary=You have received an invitation from {0} to join a folder.
+##notice.invitation.summary=Invitation from {0} to join folder {1}.
 ##notice.invitation.title=Folder Invitation
 
 ##notice_severity.information=Information
 ##notice_severity.warning=Warning
+
+##notices_information_card.view.auto=Auto-cleanup
 
 ##notices_table.date=Date
 ##notices_table.severity=Severity
@@ -1195,7 +1198,7 @@ preferences.dialog.delta_sync=\u0418\u0441\u043f\u043e\u043b\u044c\u0437\u043e\u
 preferences.dialog.delta_sync.tooltip=\u0421\u0438\u043d\u0445\u0440\u043e\u043d\u0438\u0437\u0438\u0440\u043e\u0432\u0430\u0442\u044c \u0442\u043e\u043b\u044c\u043a\u043e \u0438\u0437\u043c\u0435\u043d\u0435\u043d\u043d\u044b\u0435 \u043a\u0443\u0441\u043a\u0438 \u0444\u0430\u0439\u043b\u043e\u0432.
 #orig#preferences.dialog.dialogs.ask_to_add_friend_message=Ask to add message for connection
 preferences.dialog.dialogs.ask_to_add_friend_message=\u0421\u043f\u0440\u0430\u0448\u0438\u0432\u0430\u0442\u044c \u043e \u0434\u043e\u0431\u0430\u0432\u043b\u0435\u043d\u0438\u0438 \u043b\u0438\u0447\u043d\u043e\u0433\u043e \u0441\u043e\u043e\u0431\u0449\u0435\u043d\u0438\u044f \u0434\u0440\u0443\u0433\u0443
-#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to connections if a computer becomes a member of a folder
+#orig#preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=Ask to add to computers list if a computer becomes a member of a folder
 preferences.dialog.dialogs.ask_to_add_to_friends_if_node_becomes_member_of_folder=\u0421\u043f\u0440\u0430\u0448\u0438\u0432\u0430\u0442\u044c \u043e \u0434\u043e\u0431\u043e\u0432\u043b\u0435\u043d\u0438\u0438 \u043a \u0434\u0440\u0443\u0437\u044c\u044f\u043c, \u043a\u043e\u0433\u0434\u0430 \u0443\u0437\u0435\u043b \u0441\u0442\u0430\u043d\u043e\u0432\u0438\u0442\u0441\u044f \u0447\u043b\u0435\u043d\u043e\u043c \u041f\u0430\u043f\u043a\u0438
 #orig#preferences.dialog.dialogs.check_for_program_updates=Check for {APPNAME} program updates
 preferences.dialog.dialogs.check_for_program_updates=\u041f\u0440\u043e\u0432\u0435\u0440\u0438\u0442\u044c \u043e\u0431\u043d\u043e\u0432\u043b\u0435\u043d\u0438\u044f \u0434\u043b\u044f PowerFolder
@@ -1810,6 +1813,7 @@ transfer.problem.transfer.exception=\u041f\u0440\u043e\u0438\u0437\u043e\u0448\u
 ##transfer_mode.disabled.name=Disabled
 ##transfer_mode.host_files.name=Share/Send
 ##transfer_mode.manual_synchronization.name=Manual sync
+##transfer_mode.meta_sync.name=Auto sync (meta)
 ##transfer_mode.no_sync.name=No sync
 
 #orig#transfers.completed=Completed {0}
@@ -1934,7 +1938,7 @@ wizard.choose_disk_location.directory_size=\u0420\u0430\u0437\u043c\u0435\u0440 
 ##wizard.choose_disk_location.local_base.title=Base directory
 ##wizard.choose_disk_location.maual_sync=Manual sync
 ##wizard.choose_disk_location.options=Please select required options
-##wizard.choose_disk_location.os_over_size=Warning - Online Storage capacity may be exceeded
+##wizard.choose_disk_location.os_over_size=Allowed capacity may be exceeded. Purchase recommended.
 ##wizard.choose_disk_location.select=Please select the directory
 ##wizard.choose_disk_location.select_file=Select file
 ##wizard.choose_disk_location.send_invitation=Send invitation
